# opengl-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp  shader.cpp  shader.h  utilities.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: buffer.h  index_buffer.cpp  index_buffer.h  main.cpp  renderer.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
